crates/rome_cli/tests/snapshots/main_commands_check/no_lint_if_linter_is_disabled_when_run_apply.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "enabled": false
  }
}
```

## `fix.js`

```js
1 >= -0;

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


