crates/rome_cli/tests/snapshots/main_commands_check/no_lint_when_file_is_ignored.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `rome.json`

```json
{
  "linter": {
    "enabled": true,
    "ignore": ["test.js"]
  }
}

```

## `test.js`

```js
1 >= -0;

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


