crates/rome_cli/tests/snapshots/main_commands_check/should_disable_a_rule.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "suspicious": {
        "noDebugger": "off"
      }
    }
  }
}
```

## `fix.js`

```js
debugger;

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


