crates/rome_cli/tests/snapshots/main_commands_check/should_disable_a_rule_group.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `fix.js`

```js
1 >= -0;

```

## `rome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "suspicious": {
            "recommended": false
        }
    }
  }
}
```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


